--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     />
   </head>
   <body>
-    <video autoplay muted loop id="background-video">
+    <!-- <video autoplay muted loop id="background-video">
       <source src="src/media/background.mp4" type="video/mp4" />
-    </video>
+    </video> -->
 
     
    
