--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       
       <!-- The social media icon bar -->
       <div class="icon-bar">
-        <a href="https://www.facebook.com/bahnhofmotte/" class="facebook"><i class="fa fa-facebook"></i></a>
-        <a href="https://www.instagram.com/bahnhofmotte/" class="instagram"><i class="fa fa-instagram"></i></a>
-        <a href="https://www.youtube.com/channel/UCcJPW26R-OmQ-5xbIECt_gQ" class="youtube"><i class="fa fa-youtube"></i></a>
-        <a href="https://bahnhofmotte.bandcamp.com/releases" class="bandcamp"><i class="fa fa-bandcamp"></i></a>
+        <a href="https://www.facebook.com/bahnhofmotte/" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/bahnhofmotte/" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCcJPW26R-OmQ-5xbIECt_gQ" class="youtube" target="_blank"><i class="fa fa-youtube"></i></a>
+        <a href="https://bahnhofmotte.bandcamp.com/releases" class="bandcamp" target="_blank"><i class="fa fa-bandcamp"></i></a>
       </div>
 
    
