--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
 
     <section class="section-4" id="contact">
       <h1>CONTACT</h1>
-      <div class="email-container"><a href="mailto:info@bahnhofmotte.de">Booking: info@bahnhofmotte.de</a>
-        <a href="mailto:booking@bahnhofmotte.de">Booking: booking@bahnhofmotte.de</a></div>
-      
+      <div class="email-container">
+        <ul>
+        <li><a href="mailto:info@bahnhofmotte.de">info@bahnhofmotte.de</a></li>
+        <li><a href="mailto:booking@bahnhofmotte.de">booking@bahnhofmotte.de</a></div></li>
+      </ul>
     </section>
 
   </div>
