.cancelled-class added

--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
       <div class="column"><h2 id="future-dates">2020</h2>
         <ul>
           <li>06.03 - KvU - Berlin </li>
-          <li>21.02 - Ostpol - Dresden (ausgefallen)</li>
-          <li>27.03 - Café Wagner - Jena (ausgefallen)</li>
-          <li>28.03 - Reil78 - Halle (ausgefallen)</li>
-          <li>08.05 - Lokomov - Chemnitz (ausgefallen)</li>
-          <li>09.05 - Frau Korte - Erfurt (ausgefallen)</li>
-          <li>13.05 - Club VEB - Hildesheim (ausgefallen)</li>
-          <li>14.05 - tba. - Hannover (ausgefallen)</li>
-          <li>15.05 - Blauer Manfred - Bremen (ausgefallen)</li>
-          <li>16.05 - Schute - Hamburg (ausgefallen)</li>
-          <li>20.05 - Haus Meinusch - Mainz(ausgefallen)</li>
-          <li>21.05 - Groovestation - Dresden(ausgefallen)</li>
-          <li>22.05 - Zeitraum - Festival (ausgefallen)</li>
-          <li>23.05 - Chemiefabrik - Dresden (ausgefallen)</li>
-          <li>06.06 - St. Pieschen - Dresden (ausgefallen)</li>
-          <li>25.06 - Fusion - Festival (ausgefallen)</li>
+          <li class="cancelled">21.02 - Ostpol - Dresden</li>
+          <li class="cancelled">27.03 - Café Wagner - Jena</li>
+          <li class="cancelled">28.03 - Reil78 - Halle</li>
+          <li class="cancelled">08.05 - Lokomov - Chemnitz</li>
+          <li class="cancelled">09.05 - Frau Korte - Erfurt</li>
+          <li class="cancelled">13.05 - Club VEB - Hildesheim</li>
+          <li class="cancelled">14.05 - tba. - Hannover</li>
+          <li class="cancelled">15.05 - Blauer Manfred - Bremen</li>
+          <li class="cancelled">16.05 - Schute - Hamburg</li>
+          <li class="cancelled">20.05 - Haus Meinusch - Mainz</li>
+          <li class="cancelled">21.05 - Groovestation - Dresden</li>
+          <li class="cancelled">22.05 - Zeitraum - Festival</li>
+          <li class="cancelled">23.05 - Chemiefabrik - Dresden</li>
+          <li class="cancelled">06.06 - St. Pieschen - Dresden</li>
+          <li class="cancelled">25.06 - Fusion - Festival</li>
           <li>15.08 - Privat</li>
           <li>12.09 - Rösselstube - Dresden</li>
           <li>24.09 - Neues Schauspiel - Leipzig</li>
