changed background to mp4 and inserted meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Official Website of Bahnhof Motte - Progressive Jazz|Punk|Experimental Band from Dresden, Germany - Get infos about Tour Dates, new Music Releases and more. "
     <title>Bahnhof Motte</title>
     <link rel="stylesheet" type="text/css" href="dist/css/main.css" />
     <!-- Load font awesome icons -->
@@ -12,9 +13,11 @@
     />
   </head>
   <body>
-    <!-- <video autoplay muted loop id="background-video">
-      <source src="src/media/background.mp4" type="video/mp4" />
-    </video> -->
+    <div class="video-container">
+      <video autoplay loop width="1280" height="720">
+        <source src="/src/media/background.mp4" type="video/mp4">
+      </video>
+    </div>
 
     
    
