--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="video-container">
-      <video autoplay loop width="1280" height="720">
+      <video id="BgVideo" autoplay muted loop width="1280" height="720">
         <source src="/src/media/background.mp4" type="video/mp4">
       </video>
     </div>
@@ -214,5 +214,10 @@ E-Mail: georg.nitschke@posteo.de</p>
   </div>
   <script src="src/js/scripts.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script>
+    var bgvideo = document.getElementById("BgVideo");
+    bgvideo.muted = true;
+    bgvideo.play();
+    </script>
   </body>
 </html>
