--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="video-container">
-      <video id="BgVideo" autoplay muted="muted" loop="loop" autoplay="autoplay" width="1280" height="720">
+      <video id="BgVideo" muted="muted" loop="loop" autoplay="autoplay" width="1280" height="720">
         <source src="/src/media/background.mp4" type="video/mp4">
       </video>
     </div>
