--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@ E-Mail: georg.nitschke@posteo.de</p>
   </div>
   <script src="src/js/scripts.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>
+  <!-- <script>
     var bgvideo = document.getElementById("BgVideo");
     bgvideo.muted = true;
     bgvideo.play();
-    </script>
+  </script> -->
   </body>
 </html>
