--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h2>NEU!NEU!NEU!</h2><br><br><br>
           <h3>DU KANNST EH NIX COOLES DENKEN WENN DU SO VIEL ZEIT HAST</h3>
           <div class="logos" style="padding: 50px; width: 100%; text-align: center">
-          <a target="_blank" and rel="noopener noreferrer" href="https://bahnhofmotte.bandcamp.com/album/du-kannst-eh-nix-cooles-denken-wenn-du-so-viel-zeit-hast"><img src="/src/media/bandcamp.png" width=100px style="margin: 10px; display: inline-block"/></a>>
+          <a target="_blank" and rel="noopener noreferrer" href="https://bahnhofmotte.bandcamp.com/album/du-kannst-eh-nix-cooles-denken-wenn-du-so-viel-zeit-hast"><img src="/src/media/bandcamp.png" width=100px style="margin: 10px; display: inline-block"/></a>
           <a target="_blank" and rel="noopener noreferrer" href="https://open.spotify.com/album/58TZcyAulxN5YPvvnVEFuy?si=pxBpyXOtR2OojuVpTwcQiQ"><img src="/src/media/spotify.png" width=100px style="margin: 10px; display: inline-block"/></a>
           </div>
 
