--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="video-container">
-      <video id="BgVideo" muted="muted" loop="loop" autoplay="autoplay" width="1280" height="720" playsinline>
+      <video id="BgVideo" muted loop autoplay playsinline width="1280" height="720">
         <source src="/src/media/background.mp4" type="video/mp4">
       </video>
     </div>
