das wort zum sonntag

--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
     
     <section class="section-2" id="videos">
       <div class="video-gallery"></div>
+      <h2>DAS WORT ZUM SONNTAG</h2>
+
+      <div class="yt-video">
+        <iframe
+          
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/H6AJ11RkeCE?rel=0&modestbranding=1&autohide=1&showinfo=0&controls=0"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
       <h2>DAS KIND</h2>
         <div class="yt-video">
         <iframe
